src/objects/Transactions__c.object
<CustomObject>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_of_Payment__c</fullName>
        <label>Date of Payment</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer</label>
        <referenceTo>Developer__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>From Account</label>
        <referenceTo>Bank_Account__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone</label>
        <referenceTo>Milestone__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>To Account</label>
        <referenceTo>Bank_Account__c</referenceTo>
        <relationshipLabel>Transactions (To Account)</relationshipLabel>
        <relationshipName>Transactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Budget__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Date_of_Payment__c</columns>
        <columns>From_Account__c</columns>
        <columns>To_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Developing_payment</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Transactions__c.Developer_payment</value>
        </filters>
        <label>Developer payment</label>
    </listViews>
    <listViews>
        <fullName>Money_Flow</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Transactions__c.Money_Flow</value>
        </filters>
        <label>Money Flow</label>
    </listViews>
    <listViews>
        <fullName>Other_Expense</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Transactions__c.Other_Expense</value>
        </filters>
        <label>Other Expense</label>
    </listViews>
    <nameField>
        <displayFormat>TN-{0000}</displayFormat>
        <label>Transactions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <recordTypes>
        <fullName>Developer_payment</fullName>
        <active>true</active>
        <label>Developer payment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Incoming_Payment</fullName>
        <active>true</active>
        <label>Incoming Payment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Money_Flow</fullName>
        <active>true</active>
        <label>Money Flow</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_Expense</fullName>
        <active>true</active>
        <label>Other Expense</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_on_negative_value</fullName>
        <active>true</active>
        <errorConditionFormula>Budget__c &lt; 0</errorConditionFormula>
        <errorMessage>Amount value must be positive</errorMessage>
    </validationRules>
</CustomObject>